Combine a bunch of Australia figures.

--- a/bayesian_plate_reconstruction.tex
+++ b/bayesian_plate_reconstruction.tex
@@ -790,8 +790,8 @@ and perform an accounting of the uncertainties within our Bayesian framework.
 We fit the paleomagnetic pole list to one and two PEPs, and compared them
 to the global plate motion model from \citet{seton2012global}.
 
-Figure~\ref{fig:australia_paths_1} shows the result with for a single Euler pole
-plotted on the globe, and Figure~\ref{fig:australia_latitude_1} shows the single Euler pole result
+Figure~\ref{fig:australia_paths_1} shows the results with for a single Euler pole
+plotted on the globe, and Figure~\ref{fig:australia_speeds_1}b shows the single Euler pole result
 plotted as latitude vs. age.
 Both the paleomagnetic data and the \citet{seton2012global} model show a speed-up in
 Australia's motion as it approaches the present day, though the paleomagnetic data
@@ -799,7 +799,7 @@ has systematically higher recent latitudes.
 
 While the single Euler pole fit does a reasonble job of fitting the azimuth of the plate motion model 
 (Figure~\ref{fig:australia_paths_1}), has difficulty fitting that change in speed, 
-and does not pass through all the paleomagnetic poles in Figure~\ref{fig:australia_latitude_1}.
+and does not pass through all the paleomagnetic poles in Figure~\ref{fig:australia_speeds_1}b.
 
 \begin{figure*}
 \includegraphics[width=0.9\textwidth]{figures/australia/australia_paths_1.pdf}
@@ -807,18 +807,12 @@ and does not pass through all the paleomagnetic poles in Figure~\ref{fig:austral
 \label{fig:australia_paths_1}
 \end{figure*}
 \begin{figure*}
-\includegraphics[width=0.9\textwidth]{figures/australia/australia_latitude_1.pdf}
-\caption[Latitude vs. age for Cenozoic Australia fit to one Euler rotation]{Latitude vs. age for Cenozoic Australia fit to one Euler rotation. The paleomagnetic poles are shown as data points, with age and latitude uncertainty. The blue lines show a sampling of the posterior path distribution, and the red line shows the \citet{seton2012global} plate motion model. Note that the paleomagnetic poles are systematically above the \citet{seton2012global} model, and that the single Euler rotation paths are not able to pass through all the data points.}
-\label{fig:australia_latitude_1}
-\end{figure*}
-\begin{figure*}
-\includegraphics[width=0.9\textwidth]{figures/australia/australia_ages_1.pdf}
-\caption[Age distributions for Cenozoic Australian paleomagnetic poles fit to one Euler rotation.] {Age distributions for Cenozoic Australian paleomagnetic poles fit to one Euler rotation. Top: prior distributions. Bottom: posterior distributions. Note that the inversion prefers the oldest pole to be younger, and the younger poles to be older, within their uncertainties. This reflects the difficulty of finding a single Euler rotation to adequately explain the data (compare with \ref{fig:australia_latitude_1}). }
-\label{fig:australia_ages_1}
-\end{figure*}
-\begin{figure*}
 \includegraphics[width=0.9\textwidth]{figures/australia/australia_speeds_1.pdf}
-\caption[Australian plate speed distribution for a single-Euler pole inversion]{Australian plate speed distribution for a single-Euler pole inversion.}
+\caption[Results for Australian Cenozoic APW path with one Euler rotation.]{Results for Australian Cenozoic APW path with one Euler rotation. 
+(a) Posterior distribution for plate speed.
+(b) Latitude vs. age. The paleomagnetic poles are shown as data points, with age and latitude uncertainty. The blue lines show a sampling of the posterior path distribution, and the red line shows the \citet{seton2012global} plate motion model. Note that the paleomagnetic poles are systematically above the \citet{seton2012global} model, and that the single Euler rotation paths are not able to pass through all the data points.
+(c) Prior distributions for the ages of paleomagnetic poles.
+(d) Posterior distributions for the ages of paleomagnetic poles.}
 \label{fig:australia_speeds_1}
 \end{figure*}
 
@@ -832,20 +826,15 @@ consistent with the conclusions of \citet{idnurm1985lateII}.
 \label{fig:australia_paths_2}
 \caption[Australian Cenozoic APW path fit to two Euler rotations.]{Australian Cenozoic APW path fit to two Euler rotations. The blue distribution shows the posterior of positions for the first Euler pole, and the red distribution shows the posterior for the second Euler pole. The distribution of the first Euler pole is quite broad, reflecting the short length of the portion of the path that it is trying to fit (shorter paths provide less of a constraint on the position). The the blue paths show a sampling of paths drawn from the posterior. As in Figure~\ref{fig:australia_paths_1}, the red line shows the polar wander path derived from the global plate motion model of \citet{seton2012global}, and the red star shows the average Euler pole defined by the \citet{seton2012global} path.}
 \end{figure*}
-\begin{figure*}
-\includegraphics[width=0.9\textwidth]{figures/australia/australia_ages_2.pdf}
-\caption[Age distributions for Cenozoic Australian paleomagnetic poles fit to two Euler rotations.] {Age distributions for Cenozoic Australian paleomagnetic poles fit to two Euler rotationis. Top: prior distributions. Bottom: posterior distributions.}
-\label{fig:australia_ages_2}
-\end{figure*}
+
 \begin{figure*}
 \includegraphics[width=0.9\textwidth]{figures/australia/australia_speeds_2.pdf}
-\caption[Australian plate speed distribution for a two-Euler pole inversion]{Australian plate speed distribution for a two-Euler pole inversion. The blue distribution shows the plate speeds for the first rotation, which occurs from approximately 60-23 Ma. The red distribution shows the plate speeds for the second rotation, which occurs from approximately 23-0 Ma. The changepoint is approximate, since it is also a random variable with its own posterior distribution. This inversion prefers a slow first rotation and a fast second rotation}
+\caption[Results for Australian Cenozoic APW path with two Euler rotations.]{Results for Australian Cenozoic APW path with two Euler rotations. 
+(a) Posterior distributions for plate speeds. The blue distribution shows the plate speeds for the first rotation, which occurs from approximately 60-23 Ma. The red distribution shows the plate speeds for the second rotation, which occurs from approximately 23-0 Ma. The changepoint is approximate, since it is also a random variable with its own posterior distribution. This inversion prefers a slow first rotation and a fast second rotation.
+(b) Latitude vs. age. The paleomagnetic poles are shown as data points, with age and latitude uncertainty. The blue lines show a sampling of the posterior path distribution, and the red line shows the \citet{seton2012global} plate motion model. Compared to the single Euler pole fits (Figure~\ref{fig:australia_speeds_1}b), the two Euler pole fit does a much better job of passing through the paleomagnetic poles. However, while the modeled APW paths are qualitatively similar to the \citet{seton2012global} path in shape, the 0-23 Ma segment rotates significantly faster
+(c) Prior distributions for the ages of paleomagnetic poles.
+(d) Posterior distributions for the ages of paleomagnetic poles.}
 \label{fig:australia_speeds_2}
-\end{figure*}
-\begin{figure*}
-\includegraphics[width=0.9\textwidth]{figures/australia/australia_latitude_2.pdf}
-\caption[Latitude vs. age for Cenozoic Australia fit to two Euler rotations]{Latitude vs. age for Cenozoic Australia fit to two Euler rotations. The paleomagnetic poles are shown as data points, with age and latitude uncertainty. The blue lines show a sampling of the posterior path distribution, and the red line shows the \citet{seton2012global} plate motion model. Compared to the single Euler pole fits (\ref{fig:australia_latitude_1}), the two Euler pole fit does a much better job of passing through the paleomagnetic poles. However, while the modeled APW paths are qualitatively similar to the \citet{seton2012global} path in shape, the 0-23 Ma segment rotates significantly faster.}
-\label{fig:australia_latitude_2}
 \end{figure*}
 
 
