Lots of Keweenawan text.

--- a/bayesian_plate_reconstruction.bib
+++ b/bayesian_plate_reconstruction.bib
@@ -257,6 +257,13 @@
   publisher={Europe PMC Funders}
 }
 
+@misc{jones2001open,
+  title={Open source scientific tools for Python},
+  author={Jones, Eric and Oliphant, Travis and Peterson, P and others},
+  year={2001},
+  publisher={Scipy}
+}
+
 @article{hunter2007matplotlib,
   title={Matplotlib: A 2D graphics environment},
   author={Hunter, John D and others},
@@ -276,6 +283,24 @@
   pages={22--30},
   year={2011},
   publisher={AIP Publishing}
+}
+
+@article{pesonen1981late,
+  title={Late Precambrian Keweenawan asymmetric reversals},
+  author={Pesonen, LJ and Nevanlinna, H},
+  year={1981},
+  publisher={Nature Publishing Group}
+}
+
+@article{nevanlinna1983late,
+  title={Late Precambrian Keweenawan asymmetric polarities as analyzed by axial offset dipole geomagnetic models},
+  author={Nevanlinna, H and Pesonen, LJ},
+  journal={Journal of Geophysical Research: Solid Earth},
+  volume={88},
+  number={B1},
+  pages={645--658},
+  year={1983},
+  publisher={Wiley Online Library}
 }
 
 @article{pesonen1983geomagnetic,
@@ -605,6 +630,49 @@
   year={2016},
 }
 
+@article{evans2003true,
+  title={True polar wander and supercontinents},
+  author={Evans, David AD},
+  journal={Tectonophysics},
+  volume={362},
+  number={1},
+  pages={303--320},
+  year={2003},
+  publisher={Elsevier}
+}
+
+@article{cambiotti2011new,
+  title={New insights into mantle convection true polar wander and rotational bulge readjustment},
+  author={Cambiotti, Gabriele and Ricard, Yanick and Sabadini, Roberto},
+  journal={Earth and Planetary Science Letters},
+  volume={310},
+  number={3},
+  pages={538--543},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{evans2009palaeomagnetically,
+  title={The palaeomagnetically viable, long-lived and all-inclusive Rodinia supercontinent reconstruction},
+  author={Evans, David AD},
+  journal={Geological Society, London, Special Publications},
+  volume={327},
+  number={1},
+  pages={371--404},
+  year={2009},
+  publisher={Geological Society of London}
+}
+@article{li2008assembly,
+  title={Assembly, configuration, and break-up history of Rodinia: a synthesis},
+  author={Li, Zheng-Xiang and Bogdanova, SV and Collins, AS and Davidson, Anthony and De Waele, Bert and Ernst, RE and Fitzsimons, ICW and Fuck, RA and Gladkochub, DP and Jacobs, J and others},
+  journal={Precambrian research},
+  volume={160},
+  number={1},
+  pages={179--210},
+  year={2008},
+  publisher={Elsevier}
+}
+
 @article{henry1977paleomagnetism,
   title={Paleomagnetism of the upper Keweenawan sediments: the Nonesuch Shale and Freda Sandstone},
   author={Henry, Steven G and Mauk, Frederick J and van der Voo, Robert},
@@ -639,7 +707,7 @@
 }
 
 @article{palmer1987paleomagnetism,
-  title={Paleomagnetism and U Pb geochronology of volcanic rocks from Michipicoten Island, Lake Superior, Canada: precise calibration of the Keweenawan polar wander track},
+  title={Paleomagnetism and U-Pb geochronology of volcanic rocks from Michipicoten Island, Lake Superior, Canada: precise calibration of the Keweenawan polar wander track},
   author={Palmer, HC and Davis, DW},
   journal={Precambrian Research},
   volume={37},
