--- a/bayesian_plate_reconstruction.tex
+++ b/bayesian_plate_reconstruction.tex
@@ -117,7 +117,23 @@
 \address{}
 
 \begin{abstract}
+Apparent polar wander (APW) paths from paleomagnetic poles provide the most direct data
+for reconstructing past paleogeography and plate motions for times earlier than $\sim$200 Ma. 
+However, it has proven difficult to interpret APW paths in the presence of large errors,
+age uncertainties, and the lack of paleolongitude control in traditional paleomagnetic analysis.
+Approaches for dealing with the uncertainties in APW paths include spline fits and
+running means \citep[e.g.][e.g]{torsvik2008global}.
+Here we propose a new approach for interpretation of APW paths.
+It extends the paleomagnetic Euler pole analysis of \citet{gordon1984paleomagnetic}
+by placing it within the framework of a Bayesian inverse problem.
+This allows the natural incorporation of uncertainties (in both pole position and age).
+The resulting paleomagnetic Euler poles provide estimates for the total
+plate motions (not just the latitudinal components) as well as their uncertainties.
 
+We show several example inversions on synthetic data to demonstrate the capabilities of the method.
+We also show examples using real paleomagnetic data from Australia and 
+from the Laurentian Keweenawan province. The latter inversion gives a plate
+speed for Mesoproterozoic Laurentia of between 22.9 and 39.1 cm/yr at the 95\% level.
 \end{abstract}
 
 \begin{keyword}
@@ -999,7 +1015,7 @@ MCMC analysis was performed using PyMC.
 Additional analysis was performed using the Python packages NumPy and Scipy, and figures were created using Matplotlib.
 
 \nocite{hunter2007matplotlib}
-\nocite{vanderwalt2011numpy}
+\nocite{van2011numpy}
 \nocite{jones2001open}
 
 
