--- a/bayesian_plate_reconstruction.tex
+++ b/bayesian_plate_reconstruction.tex
@@ -904,7 +904,7 @@ The paleomagnetic poles we use, along with uncertainties and age constraints are
 \begin{landscape}
 \begin{table}
 \scriptsize
-\include{tables/keweenawan_poles}
+\input{tables/keweenawan_poles}
 \caption{}
 \label{tab:keweenawan_poles}
 \end{table}
