Get rid of unicode symbols.

--- a/bayesian_plate_reconstruction.bib
+++ b/bayesian_plate_reconstruction.bib
@@ -335,7 +335,7 @@
 }
 
 @article{tarling1996palaeomagnetic,
-  title={Palaeomagnetic-pole errors and a ‘small-circle’assessment of the Gondwanan polar-wander path},
+  title={Palaeomagnetic-pole errors and a `small-circle' assessment of the Gondwanan polar-wander path},
   author={Tarling, DH and Abdeldayem, AL},
   journal={Geophysical Journal International},
   volume={125},
