--- a/bayesian_plate_reconstruction.bib
+++ b/bayesian_plate_reconstruction.bib
@@ -326,7 +326,7 @@
 }
 
 @article{minson2013bayesian,
-  title={Bayesian inversion for finite fault earthquake source models I—theory and algorithm},
+  title={Bayesian inversion for finite fault earthquake source models I-theory and algorithm},
   author={Minson, SE and Simons, M and Beck, JL},
   journal={Geophysical Journal International},
   pages={ggt180},
