Correct statement on great circles.

--- a/bayesian_plate_reconstruction.tex
+++ b/bayesian_plate_reconstruction.tex
@@ -241,9 +241,8 @@ which we briefly review here.
 Due to the rotational symmetry of Earth's magnetic field, paleomagnetic poles do not
 directly constrain the paleolongitude of the continental block in question \citep{butler1992paleomagnetism}.
 The simplest analysis of an APW path is thus to compare the paleolatitudes implied successive poles.
-The difference in paleolatitudes gives a mininimum distance over which the block has traveled, 
-corresponding to the great circle path between the two poles. If the two poles are well-dated,
-this also furnishes a rate of latitudinal motion.
+The difference in paleolatitudes gives a mininimum angular distance over which the block has traveled. 
+If the two poles are well-dated, this also furnishes a rate of latitudinal motion.
 
 It is also possible to estimate confidence bounds on the rate of latitudinal drift by
 bootstrap resampling \citep[e.g.][]{tarduno1990fast} or by taking a Monte Carlo approach. 
