--- a/bayesian_plate_reconstruction.tex
+++ b/bayesian_plate_reconstruction.tex
@@ -935,15 +935,15 @@ on the results with one and two PEPs.
 The fit with a single PEP is shown in Figure~\ref{fig:keweenawan_paths_1}.
 The posterior distribution of the position for the Euler pole is shown in in blue,
 and a sampling of the small-circle paths generated from the posterior distribution are ploted over the paleomagnetic poles.
-Figure~\ref{fig:keweenawan_ages_1} shows the prior and posterior distributions for the ages of the poles,
-and Figure~\ref{fig:keweenawan_speeds_1} shows the posterior distribution of the plate speed for Laurentia,
+Figure~\ref{fig:keweenawan_speeds_1}(c) and~\ref{fig{keqeenawan_speeds_1}(d) show the prior and posterior distributions for the ages of the poles,
+and Figure~\ref{fig:keweenawan_speeds_1}(a) shows the posterior distribution of the plate speed for Laurentia,
 calculated with respect to Duluth, MN (46.8$^\circ$N, 92.1$\circ$W).
 The median plate speed for the one-Euler pole inversion is 26.5 cm/yr, with a 95\% credible interval of 23.1-30.4 cm/yr.
 
 The fit with two PEPs is shown in Figure~\ref{fig:keweenawan_paths_2}.
 The posterior distribution of the position for the first Euler pole is shown in blue,
 and the posterior distribution of the position for the second Euler pole is shown in red.
-Figure~\ref{fig:keweenawan_ages_2} shows the prior and posterior distributions for the ages of the poles,
+Figure~\ref{fig:keweenawan_speeds_2}(c) and~\ref{fig{keqeenawan_speeds_2}(d) show the prior and posterior distributions for the ages of the poles,
 and Figure~\ref{fig:keweenawan_speeds_2} shows the posterior distribution of the plate speeds for the two rotations.
 The inversion places the changepoint between the two Euler rotations at roughly 1098 Ma.
 Before the chaingepoint the inverted plate motion is much faster, with median at 30.0 cm/yr
