--- a/bayesian_plate_reconstruction.tex
+++ b/bayesian_plate_reconstruction.tex
@@ -935,7 +935,7 @@ on the results with one and two PEPs.
 The fit with a single PEP is shown in Figure~\ref{fig:keweenawan_paths_1}.
 The posterior distribution of the position for the Euler pole is shown in in blue,
 and a sampling of the small-circle paths generated from the posterior distribution are ploted over the paleomagnetic poles.
-Figure~\ref{fig:keweenawan_speeds_1}(c) and~\ref{fig{keqeenawan_speeds_1}(d) show the prior and posterior distributions for the ages of the poles,
+Figure~\ref{fig:keweenawan_speeds_1}(c) and~\ref{fig:keqeenawan_speeds_1}(d) show the prior and posterior distributions for the ages of the poles,
 and Figure~\ref{fig:keweenawan_speeds_1}(a) shows the posterior distribution of the plate speed for Laurentia,
 calculated with respect to Duluth, MN (46.8$^\circ$N, 92.1$\circ$W).
 The median plate speed for the one-Euler pole inversion is 26.5 cm/yr, with a 95\% credible interval of 23.1-30.4 cm/yr.
