--- a/bayesian_plate_reconstruction.tex
+++ b/bayesian_plate_reconstruction.tex
@@ -797,7 +797,7 @@ This gives us the opportunity to compare the results of our model to those known
 \begin{table}
 \scriptsize
 \input{tables/australia_poles}
-\caption{Paleomagnetic poles used for the Australia inversion, as well as references. 
+\caption[Paleomagnetic poles used for the Australia inversion.]{Paleomagnetic poles used for the Australia inversion, as well as references. 
 $\psi_p$ and $\phi_p$ give the latitude and longitude of the mean pole position, and A95 gives the 95\% angular confidence interval for that position.
 The paleomagnetic poles come primarily from sedimentary successions with biostratigraphic age control 
 (with the exception of the Newer Volcanics, which erupted from $\sim2-4$ Ma).
@@ -925,7 +925,7 @@ The paleomagnetic poles we use, along with uncertainties and age constraints are
 \begin{table}
 \scriptsize
 \input{tables/keweenawan_poles}
-\caption{Paleomagnetic poles used for the Keweenawan inversion, as well as references for their positions and ages. 
+\caption[Paleomagnetic poles used for the Keweenawan inversion.]{Paleomagnetic poles used for the Keweenawan inversion, as well as references for their positions and ages. 
 $\psi_p$ and $\phi_p$ give the latitude and longitude of the mean pole position, and A95 gives the 95\% angular confidence interval for that position.
 For poles with a radiometric date we give the age with 2$\sigma$ error bars.
 For poles with stratigraphic age control we give upper and lower bounds on the age.}
